[package]
name = "rust-tangerine"
version = "0.1.0"
authors = ["Pete <pavlovskipetko@abv.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
serde="1.0.114"
serde_json="1.0.56"
serde_derive= "1.0.114"
exitfailure = "0.5.1"
chrono = "0.4"
fb_messenger = "0.1.10"
tokio = { version = "0.2.21", features= ["full"] }
